# Kokkos_Intro

./: CMakeLists.txt  README
include/: KokkosCore_config.h
src/: kokkos_1.cpp
